# tree_trunks

./: .gitignore  CMakeLists.txt  README.md  TODO.md  conanfile.py
.github/workflows/: main.yml
examples/: custom_config.cpp  custom_type.cpp  enable_if.cpp  eol.cpp  examples.cmake  modules.cpp  tt_default.cpp
include/tt/: color.hpp  log.hpp  port.hpp  tt.hpp  types.hpp
include/tt/impl/: log_impl.hpp  meta_helper.hpp
scripts/: test_examples.sh
src/include/tt/: color.hpp  functions_conv.hpp  log.hpp  port.hpp  tt.hpp  types.hpp  uncolor.hpp
src/include/tt/impl/: log_impl.hpp  meta_helper.hpp
